# tweet-sentiment-analysis

./: .env.example  .gitignore  LICENSE  QUESTIONARIO.md  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  main.py
notebooks/: 01_EDA.ipynb  02_baseline.ipynb  03_ensemble.ipynb
scripts/: push_to_hub.py  run_inference.py
src/: __init__.py  data_loader.py  ensemble.py  evaluate.py  models.py  preprocessor.py
tests/: test_preprocessor.py
